--- a/sections/home-categories-section.liquid
+++ b/sections/home-categories-section.liquid
@@ -125,8 +125,18 @@
     }
     .home-gender-categories-right-image,
     .home-gender-categories-left-image {
-      width: 100px;
+      width: 300px;
       z-index: -1;
+      opacity: 0.4;
+    }
+    .home-gender-categories-left-image {
+      top: -125px;
+      transform: rotate(314deg);
+    }
+    .home-gender-categories-right-image {
+      bottom: -200px;
+      right: -60px;
+      transform: rotate(322deg);
     }
   }
 </style>
