--- a/sections/home-promises.liquid
+++ b/sections/home-promises.liquid
@@ -33,12 +33,14 @@
     height: fit-content;
     position: relative;
     margin-top: 50px;
+    padding-top: 1px;
   }
   .home-promises-container {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    padding-bottom: 40px;
   }
   .promises-background-image {
     position: absolute;
@@ -75,9 +77,7 @@
       align-items: center; /* Vertically center content */
       justify-items: center; /* Horizontally center content */
     }
-    .home-promises-parent-container {
-      padding-top: 1px;
-    }
+
     .promises-main-image {
       width: 20rem;
       scale: 1.2;
