--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -226,6 +226,30 @@
       </div>
       {% render 'header-search', input_id: 'Search-In-Modal' %}
 
+      {%- for block in section.blocks -%}
+        {%- case block.type -%}
+          {%- when '@app' -%}
+            {% render block %}
+        {%- endcase -%}
+      {%- endfor -%}
+
+      <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
+          {% if cart == empty %}
+            <span class="svg-wrapper">{{'icon-cart-empty.svg' | inline_asset_content }}</span>
+          {% else %}
+            <span class="svg-wrapper">{{'icon-cart.svg' | inline_asset_content }}</span>
+          {% endif %}
+        <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
+        {%- if cart != empty -%}
+          <div class="cart-count-bubble">
+            {%- if cart.item_count < 100 -%}
+              <span aria-hidden="true">{{ cart.item_count }}</span>
+            {%- endif -%}
+            <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
+          </div>
+        {%- endif -%}
+      </a>
+
       {%- if shop.customer_accounts_enabled -%}
         <a
           href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
@@ -254,34 +278,48 @@
           </span>
         </a>
       {%- endif -%}
-
-      {%- for block in section.blocks -%}
-        {%- case block.type -%}
-          {%- when '@app' -%}
-            {% render block %}
-        {%- endcase -%}
-      {%- endfor -%}
-
-      <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
-          {% if cart == empty %}
-            <span class="svg-wrapper">{{'icon-cart-empty.svg' | inline_asset_content }}</span>
-          {% else %}
-            <span class="svg-wrapper">{{'icon-cart.svg' | inline_asset_content }}</span>
-          {% endif %}
-        <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
-        {%- if cart != empty -%}
-          <div class="cart-count-bubble">
-            {%- if cart.item_count < 100 -%}
-              <span aria-hidden="true">{{ cart.item_count }}</span>
-            {%- endif -%}
-            <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
-          </div>
-        {%- endif -%}
-      </a>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_275.png?v=1737751084">
     </div>
   </header>
 </{% if section.settings.sticky_header_type != 'none' %}sticky-header{% else %}div{% endif %}>
-
+  <div class="header-categories-container">
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_276.png?v=1737752059">
+      <p>Massagers</p>
+    </div>
+    </a>
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_277.png?v=1737752059">
+      <p>Vibrators</p>
+    </div>
+    </a>
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_278.png?v=1737752059">
+      <p>Bundles</p>
+    </div>
+    </a>
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_279.png?v=1737752059">
+      <p>Lubes & Oils</p>
+    </div>
+    </a>
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_280.png?v=1737752059">
+      <p>Deals</p>
+    </div>
+    </a>
+    <a href="">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_281.png?v=1737752059">
+      <p>Gifting</p>
+    </div>
+    </a>
+  </div>
 {%- if settings.cart_type == "notification" -%}
   {%- render 'cart-notification', color_scheme: section.settings.color_scheme, desktop_menu_type: section.settings.menu_type_desktop -%}
 {%- endif -%}
