--- a/sections/home-combos.liquid
+++ b/sections/home-combos.liquid
@@ -2,10 +2,12 @@
   <p class="section-subheading">{{ section.settings.section_subheading }}</p>
   <h2 class="section-heading">{{ section.settings.section_heading }}</h2>
   <div class="page-width home-combo-section">
-    <img
-      class="home-combos-slider-button--prev"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_252.png?v=1737363649"
-    >
+    {% comment %}
+      <img
+        class="home-combos-slider-button--prev"
+        src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_252.png?v=1737363649"
+      >
+    {% endcomment %}
     <div class="carousel-track">
       {% for product in section.settings.collection.products %}
         {% render 'card-product',
@@ -21,23 +23,34 @@
       {% endfor %}
     </div>
 
-    <img
-      class="home-combos-slider-button--next"
-      style="transform: rotate(180deg);"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_252.png?v=1737363649"
-    >
+    {% comment %}
+      <img
+        class="home-combos-slider-button--next"
+        style="transform: rotate(180deg);"
+        src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_252.png?v=1737363649"
+      >
+    {% endcomment %}
   </div>
+  <a class="home-all-combos-cta-button" href="{{section.settings.button_link}}">All Combos</a>
 </div>
 
 <style>
   .home-combo-section-container {
     padding: 0 0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .home-combo-section-container a {
+    text-decoration: none;
   }
   .home-combo-section-container .section-heading {
     margin-top: 0 !important;
     line-height: 3.5rem;
   }
   .home-combo-section {
+    width: 100%;
     padding: 0 20px;
     position: relative;
   }
@@ -50,10 +63,42 @@
     gap: 10px;
     overflow: auto;
   }
+  .carousel-track .card-wrapper .quick-add {
+    visibility: hidden;
+    opacity: 0;
+    scale: 0;
+    height: 0;
+    transition: all 0.3s ease-in-out;
+  }
+  .carousel-track .card-wrapper:hover .quick-add {
+    visibility: visible;
+    height: auto;
+    scale: 1;
+    opacity: 1;
+  }
+  .carousel-track .card-wrapper {
+    transition: all 0.3s ease-in-out;
+  }
+  .carousel-track .card-wrapper:hover {
+    scale: 0.95;
+  }
   .carousel-track::-webkit-scrollbar {
     display: none;
   }
-
+  .home-all-combos-cta-button {
+    color: #382d43;
+    background-color: #ff9d00;
+  }
+  .carousel-track .card-wrapper {
+    box-shadow: none !important;
+    transition: all ease-in 0.2s;
+  }
+  .carousel-track .card-wrapper:hover {
+    box-shadow: 0px 3px 24px -4px rgba(0, 0, 0, 0.15) !important;
+  }
+  .carousel-track .card__badge {
+    display: none;
+  }
   .carousel-track {
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -89,11 +134,21 @@
     border-radius: 50%;
   }
   .carousel-track .card-wrapper {
-    min-width: 350px;
+    min-width: 320px;
+  }
+
+  .carousel-track
+    .card-information
+    > *:not(.visually-hidden:first-child)
+    + *:not(.rating):not(.card__information-volume-pricing-note) {
+    margin-top: 0 !important;
   }
   .carousel-track .card__inner {
     border-radius: 20px;
     overflow: hidden;
+  }
+  .carousel-track .price--on-sale .price-item--regular {
+    font-weight: 300;
   }
   .carousel-track a,
   .carousel-track span {
@@ -102,9 +157,14 @@
   .carousel-track a {
     font-weight: 400;
     font-family: 'Kanit';
-    font-size: 2.6rem;
+    font-size: 2.3rem;
+    margin-top: 5px;
   }
-  .carousel-track span {
+  .carousel-track .price-item,
+  .carousel-track .price-item span {
+    font-size: 1.5rem;
+  }
+  .carousel-track .full-unstyled-link {
     font-size: 2rem;
   }
   .carousel-track .price__container {
@@ -154,23 +214,25 @@
   }
 </style>
 
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const track = document.querySelector('.carousel-track');
-    const prevButton = document.querySelector('.home-combos-slider-button--prev');
-    const nextButton = document.querySelector('.home-combos-slider-button--next');
+{% comment %}
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const track = document.querySelector('.carousel-track');
+      const prevButton = document.querySelector('.home-combos-slider-button--prev');
+      const nextButton = document.querySelector('.home-combos-slider-button--next');
 
-    const scrollAmount = track.clientWidth / 3; // Adjust based on items shown
+      const scrollAmount = track.clientWidth / 3; // Adjust based on items shown
 
-    prevButton.addEventListener('click', () => {
-      track.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+      prevButton.addEventListener('click', () => {
+        track.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+      });
+
+      nextButton.addEventListener('click', () => {
+        track.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+      });
     });
-
-    nextButton.addEventListener('click', () => {
-      track.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-    });
-  });
-</script>
+  </script>
+{% endcomment %}
 
 {% schema %}
 {
@@ -192,6 +254,11 @@
       "id": "section_heading",
       "label": "Section Heading",
       "default": "More Pleasure, More Savings"
+    },
+    {
+      "type": "url",
+      "id": "button_link",
+      "label": "Button Link"
     }
   ],
   "presets": [
