--- a/sections/home-quiz-cta.liquid
+++ b/sections/home-quiz-cta.liquid
@@ -15,48 +15,48 @@
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_11.png?v=1737619704"
         style="
-                        --x: 20px;
-          --y: 50px; --rotate: -45deg;
+                               --x: 15px;
+          --y: 20px; --rotate: -45deg;
         "
       >
       <img
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_7.png?v=1737619704"
         style="
-                              --x: 170px;
-          --y: 20px; --rotate: 60deg;
+                               --x: 175px;
+          --y: -40px;--rotate: 60deg;
         "
       >
       <img
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_17.png?v=1737619704"
         style="
-          --x: 250px;
-          --y: 30px; --rotate: -30deg;
+                    --x: 263px;
+          --y: -50px; --rotate: -30deg;
         "
       >
       <img
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_6.png?v=1737619704"
         style="
-          --x: 90px;
-          --y: 21px; --rotate: 15deg;
+                   --x: 90px;
+          --y: -9px; --rotate: 15deg;
         "
       >
       <img
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_10_1.png?v=1737619704"
         style="
-                    --x: 360px;
-          --y: 120px; --rotate: -10deg;
+                            --x: 400px;
+          --y: 70px;--rotate: -10deg;
         "
       >
       <img
         class="small-image"
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/file_16.png?v=1737619704"
         style="
-          --x: 320px;
-          --y: 60px; --rotate: 25deg;
+                    --x: 360px;
+          --y: -20px; --rotate: 25deg;
         "
       >
     </div>
@@ -91,28 +91,30 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    height: 380px;
-    margin: 50px 0 0;
+    height: 470px;
+    margin: 0;
+    padding-top: 60px;
   }
   .home-quiz-cta-heading {
     background: linear-gradient(90deg, #ef4d70 0%, #7313b8 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 3rem;
+    font-size: 5rem;
     font-weight: 700;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 0px;
     text-align: center;
-    line-height: 3rem;
+    line-height: 5rem;
     margin: 0 0 10px;
   }
   .home-quiz-cta-subheading {
     font-size: 1.5rem;
     margin: 0;
+    font-weight: 500;
   }
 
   .home-home-quiz-cta .left-img {
-    width: 400px;
+    width: 500px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -143,7 +145,7 @@
     align-items: center;
   }
   .home-quiz-cta-subheading span {
-    font-weight: 600;
+    font-weight: 700;
   }
 
   .small-images-container {
@@ -157,7 +159,7 @@
   }
   .small-image {
     position: absolute;
-    width: 50px;
+    width: 60px;
     height: auto;
     transition: transform 1.5s ease, opacity 1s ease;
     transform: translate(150px, 220px) rotate(0);
@@ -175,13 +177,19 @@
       padding-bottom: 50px;
     }
   }
-  @media (max-width: 500px) {
+  @media (max-width: 750px) {
+    .home-quiz-cta-heading {
+      font-size: 4rem;
+      line-height: 4rem;
+    }
     .home-home-quiz-cta .left-img {
       width: 320px;
     }
     .home-home-quiz-cta {
-      height: 590px;
-      padding-top: 31px;
+      flex-direction: column-reverse;
+      padding-bottom: 0;
+      height: 600px;
+      padding-top: 50px;
     }
     .home-home-quiz-cta.animate .small-image:first-of-type {
       --x: 0px !important;
