--- a/sections/shoppable-videos.liquid
+++ b/sections/shoppable-videos.liquid
@@ -4,7 +4,13 @@
     {% if block.settings.video_url and block.settings.product %}
       <div class="shoppable-video-block">
         <div class="video-container">
-          {{ block.settings.video_url | video_tag: autoplay: false, loop: true, muted: false, controls: true }}
+          <img
+            src="{{ block.settings.image | img_url: 'medium' }}"
+            class="shoppable-video-image"
+          >
+          <div class="shoppable-video-container">
+            {{ block.settings.video_url | video_tag: autoplay: false, loop: true, muted: false, controls: true }}
+          </div>
         </div>
 
         {% assign product = all_products[block.settings.product] %}
@@ -36,7 +42,6 @@
     {% endif %}
   {% endfor %}
 </div>
-
 <style>
   .shoppable-videos {
     display: flex;
@@ -61,14 +66,20 @@
     scroll-snap-align: start;
     min-width: 270px;
   }
-
+  .video-container img {
+    width: 100%;
+    display: flex;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 15px;
+  }
   .video-container {
     width: 100%;
   }
   .video-container video {
     width: 100%;
     height: auto;
-    border-radius: 8px;
+    border-radius: 10px;
     margin-bottom: 15px;
   }
 
@@ -91,19 +102,21 @@
 
   .product-title {
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 500;
     margin: 0;
+    font-family: 'Kanit', sans-serif;
   }
 
   .product-prices {
     font-size: 1.3rem;
     letter-spacing: 0px;
     margin: 0;
+    font-family: 'Kanit', sans-serif;
   }
 
   .sale-price {
     color: #000000;
-    font-weight: bold;
+    font-weight: 500;
     margin-right: 5px;
   }
 
@@ -120,7 +133,33 @@
     }
   }
 </style>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const shoppableVideoBlocks = document.querySelectorAll('.video-container');
 
+    shoppableVideoBlocks.forEach((block) => {
+      const image = block.querySelector('.shoppable-video-image');
+      const shoppableVideoContainer = block.querySelector('.shoppable-video-container');
+      const video = shoppableVideoContainer.querySelector('video');
+
+      // Hide the video container initially
+      shoppableVideoContainer.style.display = 'none';
+
+      // Add click event to the image
+      image.addEventListener('click', () => {
+        image.style.display = 'none'; // Hide the image
+        shoppableVideoContainer.style.display = 'flex'; // Show the video container
+        video.play(); // Play the video
+      });
+
+      // Add pause event to the video
+      video.addEventListener('pause', () => {
+        shoppableVideoContainer.style.display = 'none'; // Hide the video container
+        image.style.display = 'flex'; // Show the image
+      });
+    });
+  });
+</script>
 {% schema %}
 {
   "name": "Shoppable Videos",
@@ -141,6 +180,11 @@
           "type": "video",
           "id": "video_url",
           "label": "Video"
+        },
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Placeholder"
         },
         {
           "type": "product",
