home page new sections

--- a/sections/home-deal-of-the-day.liquid
+++ b/sections/home-deal-of-the-day.liquid
@@ -5,7 +5,7 @@
     class="background-image"
     src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_256.jpg?v=1737550774"
   >
-  <div class="deal-of-the-day-content">
+  <div class="page-width deal-of-the-day-content">
     <div class="deal-of-the-day-text-container">
       <div class="deal-of-the-day-text">
         <p class="deal-of-the-day-heading">Deals</p>
