--- a/sections/home-combos.liquid
+++ b/sections/home-combos.liquid
@@ -149,6 +149,7 @@
   }
   .carousel-track .price--on-sale .price-item--regular {
     font-weight: 300;
+    font-size: 1.3rem;
   }
   .carousel-track a,
   .carousel-track span {
