--- a/sections/home-testimonials.liquid
+++ b/sections/home-testimonials.liquid
@@ -34,6 +34,7 @@
   .testimonial-video-container video {
     width: 100%;
     height: auto;
+    border-radius: 6px;
   }
   @media (max-width: 850px) {
     .home-testimonials-container {
