--- a/sections/product-info-fold.liquid
+++ b/sections/product-info-fold.liquid
@@ -27,13 +27,42 @@
         <h1>{{ product.title | escape }}</h1>
         <p class="product-info-fold-left-subheadng">{{ product.metafields.content.subheading }}</p>
         <p class="product-info-fold-left-description">{{ product.metafields.content.info_fold_description }}</p>
+
+        <p
+          class="product__inventory {% if product.selected_or_first_available_variant.inventory_management != 'shopify' %} visibility-hidden{% endif %}"
+          id="Inventory-{{ section.id }}"
+          role="status"
+        >
+          {%- if product.selected_or_first_available_variant.inventory_management == 'shopify' -%}
+            {%- if product.selected_or_first_available_variant.inventory_quantity > 0 -%}
+              <span class="svg-wrapper" style="color: rgb(238, 148, 65)">
+                {{- 'icon-inventory-status.svg' | inline_asset_content -}}
+              </span>
+            {%- else -%}
+              <span class="svg-wrapper" style="color: rgb(62, 214, 96)">
+                {{- 'icon-inventory-status.svg' | inline_asset_content -}}
+              </span>
+            {%- endif -%}
+          {%- else -%}
+            {%- if product.selected_or_first_available_variant.inventory_policy == 'continue' -%}
+              <span class="svg-wrapper" style="color: rgb(62, 214, 96)">
+                {{- 'icon-inventory-status.svg' | inline_asset_content -}}
+              </span>
+            {%- else -%}
+              <span class="svg-wrapper" style="color: rgb(200, 200, 200)">
+                {{- 'icon-inventory-status.svg' | inline_asset_content -}}
+              </span>
+            {%- endif -%}
+          {%- endif -%}
+        </p>
+
         <div class="product-info-fold-price-and-rating-container">
           <div class="product-info-fold-price-container">
             <div id="price-{{ section.id }}" role="status">
               {%- render 'price',
                 product: product,
                 use_variant: true,
-                show_badges: false,
+                show_badges: true,
                 price_class: 'price--large'
               -%}
             </div>
@@ -66,43 +95,45 @@
               {%- endform -%}
             </div>
           </div>
-          {%- if product.metafields.reviews.rating.value != blank -%}
-            <div class="rating-wrapper">
-              {% liquid
-                assign rating_decimal = 0
-                assign decimal = product.metafields.reviews.rating.value.rating | modulo: 1
-                if decimal >= 0.3 and decimal <= 0.7
-                  assign rating_decimal = 0.5
-                elsif decimal > 0.7
-                  assign rating_decimal = 1
-                endif
-              %}
-              <div
-                class="rating"
-                role="img"
-                aria-label="{{ 'accessibility.star_reviews_info' | t: rating_value: product.metafields.reviews.rating.value, rating_max: product.metafields.reviews.rating.value.scale_max }}"
-              >
-                <span
-                  aria-hidden="true"
-                  class="rating-star"
-                  style="--rating: {{ product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ product.metafields.reviews.rating.value.scale_max }}; --rating-decimal: {{ rating_decimal }};"
-                ></span>
+          {% comment %}
+            {%- if product.metafields.reviews.rating.value != blank -%}
+              <div class="rating-wrapper">
+                {% liquid
+                  assign rating_decimal = 0
+                  assign decimal = product.metafields.reviews.rating.value.rating | modulo: 1
+                  if decimal >= 0.3 and decimal <= 0.7
+                    assign rating_decimal = 0.5
+                  elsif decimal > 0.7
+                    assign rating_decimal = 1
+                  endif
+                %}
+                <div
+                  class="rating"
+                  role="img"
+                  aria-label="{{ 'accessibility.star_reviews_info' | t: rating_value: product.metafields.reviews.rating.value, rating_max: product.metafields.reviews.rating.value.scale_max }}"
+                >
+                  <span
+                    aria-hidden="true"
+                    class="rating-star"
+                    style="--rating: {{ product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ product.metafields.reviews.rating.value.scale_max }}; --rating-decimal: {{ rating_decimal }};"
+                  ></span>
+                </div>
+                <p class="rating-text caption">
+                  <span aria-hidden="true">
+                    {{- product.metafields.reviews.rating.value }} /
+                    {{ product.metafields.reviews.rating.value.scale_max -}}
+                  </span>
+                </p>
+                <p class="rating-count caption">
+                  <span aria-hidden="true">({{ product.metafields.reviews.rating_count }})</span>
+                  <span class="visually-hidden">
+                    {{- product.metafields.reviews.rating_count }}
+                    {{ 'accessibility.total_reviews' | t -}}
+                  </span>
+                </p>
               </div>
-              <p class="rating-text caption">
-                <span aria-hidden="true">
-                  {{- product.metafields.reviews.rating.value }} /
-                  {{ product.metafields.reviews.rating.value.scale_max -}}
-                </span>
-              </p>
-              <p class="rating-count caption">
-                <span aria-hidden="true">({{ product.metafields.reviews.rating_count }})</span>
-                <span class="visually-hidden">
-                  {{- product.metafields.reviews.rating_count }}
-                  {{ 'accessibility.total_reviews' | t -}}
-                </span>
-              </p>
-            </div>
-          {%- endif -%}
+            {%- endif -%}
+          {% endcomment %}
         </div>
         {%- render 'buy-buttons',
           product: product,
@@ -171,6 +202,14 @@
     align-items: start;
     width: 33%;
   }
+  .product-info-fold-left-container .product__inventory {
+    margin: 16px 0 -16px;
+    line-height: 1rem;
+  }
+  .product-info-fold-left-container .product__inventory .svg-wrapper {
+    width: 16px;
+    height: 16px;
+  }
   .product-info-fold-middle-container {
     display: flex;
     flex-direction: column;
@@ -234,6 +273,16 @@
   .product-info-fold-price-and-rating-container .rating-star::before {
     background-color: #ffb800 !important;
     font-size: 2rem;
+    line-height: 0rem;
+  }
+  .product-info-fold-price-and-rating-container .price--large {
+    display: flex;
+    gap: 5px;
+  }
+  .product-info-fold-price-and-rating-container .price--large .price__badge-sale {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .product-info-fold-left-container .product-form__submit {
     color: #fff;
