--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -125,7 +125,11 @@
     </div>
     {%- if show_badges -%}
       <span class="badge price__badge-sale color-{{ settings.sale_badge_color_scheme }}">
-        {{ 'products.product.on_sale' | t }}
+        {% comment %} {{ 'products.product.on_sale' | t }} {% endcomment %}
+        {%- assign discount = product.compare_at_price | minus: product.price -%}
+        {%- assign discount_percentage = discount | times: 100 | divided_by: product.compare_at_price | round -%}
+        {{ discount_percentage }}
+        %
       </span>
 
       <span class="badge price__badge-sold-out color-{{ settings.sold_out_badge_color_scheme }}">
